--- a/src/main/webapp/html/MaintenanceTaskDispatcher.html
+++ b/src/main/webapp/html/MaintenanceTaskDispatcher.html
@@ -432,7 +432,14 @@
                 this.$emit('post-row',currentRow);
             },
             handleSearch: function () {
-                axios.post("/")
+                var that = this;
+                var parma = new URLSearchParams();
+                axios.post("/Devices/getServiceRecord",parma).then(
+                    function (response) {
+                        var data = JSON.parse(response.data).data;
+                        that.maintenanceTaskData = data;
+                    }
+                );
             }
         }
     }
