--- a/src/main/webapp/html/MaintenanceTaskDispatcher.html
+++ b/src/main/webapp/html/MaintenanceTaskDispatcher.html
@@ -147,6 +147,7 @@
             return {
                 brand: '',
                 type: '',
+                model: '',
                 seriesNum: '',
                 hdd: '',
                 memory: '',
@@ -165,6 +166,7 @@
             info() {
                 this.brand = this.info.brand;
                 this.type = this.info.type;
+                this.model = this.info.model;
                 this.seriesNum = this.info.seriesNum;
                 this.hdd = this.info.hdd;
                 this.memory = this.info.memory;
