--- a/src/main/webapp/html/MaintenanceTaskDispatcher.html
+++ b/src/main/webapp/html/MaintenanceTaskDispatcher.html
@@ -162,7 +162,7 @@
                 this.$emit('post-device-info',info);
             }
         },
-        prop: [
+        props: [
             'info'
         ],
         watch: {
@@ -235,7 +235,7 @@
         methods: {
 
         },
-        prop: [
+        props: [
             'info'
         ],
         watch: {
